Fix docker image versions and demonstrate java client

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ networks:
 
 services:
   runner:
-    image: apacheignite/ignite
+    image: apacheignite/ignite:2.7.0
     environment:
       - "CONFIG_URI=https://raw.githubusercontent.com/coenvl/ignite-config/master/p2p/TcpDicoverySingleJobConfiguration.xml"
     networks:
